# stemdiff_unet

./: .gitignore  README.md  create_targets.py  data_split.py  data_utils.py  doc.sh  evaluate_models.py  evaluate_models_val.py  grid_search.py  mean_bkgp.py  modify_profiles.py  pyproject.toml  requirements_editable.txt  sum_fn.py
DATA.STEMDIFF/: center.txt
DATA.STEMDIFF/cif/: 1530594_gdf3.cif  1530594_gdf3_note.txt  tio2_anatase_9015929.cif  tio2_rutile_9015662.cif
dbase/: dbase_au.csv  dbase_feo.csv  dbase_feo_shell.csv  dbase_gdf3.csv  dbase_laf3.csv  dbase_tbf3.csv  dbase_tio2-a.csv  dbase_tio2-r.csv
unet/: calibration_constants.ipynb  create_dataset2.1.ipynb  create_filtered_dataset.ipynb  create_pass2_data.ipynb  create_profiles.ipynb  create_targets.ipynb  create_targets_fn.py  data.py  dataset_enhancement.py  eval.py  loss.py  model.py  plot.py  results.ipynb  run_training_2d+1d.py  run_training_2d+self_sup.py  run_training_2d.py  run_training_2d_2.py  run_training_self_sup.py  run_training_self_sup_all.py  to_onnx.py  train.py  unet.py
unet/dataset_filtered/: center_sizes.json  dataset_params.json
